Problem-11/merge-sort-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge-sort-site
  namespace: default
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: merge-sort-app
          image: merge-sort
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
