Problem-11/merge-sort-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: merge-sort-pod
  labels:
    app: web
spec:
  containers:
    - name: merge-sort-app
      image: merge-sort
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
