Problem-11/merge-sort-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: merge-sort-service
  namespace: default
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
